--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=gateway
 
 #Gateway
 spring.cloud.gateway.routes[0].id= route1
-spring.cloud.gateway.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.routes[0].uri=http://localhost:8083
 spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
 
 spring.cloud.gateway.routes[1].id=service2-route
@@ -11,8 +11,13 @@ spring.cloud.gateway.routes[1].uri=http://localhost:8082
 spring.cloud.gateway.routes[1].predicates[0]=Path=/report/**
 
 
+spring.cloud.gateway.routes[2].id=service2-route
+spring.cloud.gateway.routes[2].uri=http://localhost:3000
+spring.cloud.gateway.routes[2].predicates[0]=Path=/cst/**
 
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:4200
+
+
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:4200, http://localhost:4042
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET, POST, PUT, DELETE, OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
